<resources>
    <string name="app_name">PetHelper</string>
    <string name="accedi">Accedi</string>
    <string name="oppure">oppure</string>
    <string name="registrati">Registrati</string>
    <string name="bentornato">Bentornato!</string>
    <string name="accedi_per_continuare">Accedi per continuare</string>
    <string name="Password">PASSWORD</string>
    <string name="password">password</string>
    <string name="username">USERNAME</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="email">email address</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">or</string>
    <string name="login">LOGIN</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="welcome">Welcome!</string>
    <string name="pet_helper">Pet Helper</string>
    <string name="general">General</string>
    <string name="support">Support</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="add_pet">Add Pet</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="account">Account</string>
    <string name="title_activity_basic">BasicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="insert_item">ADD PET</string>
    <string name="remove_item">Remove Item</string>
    <string name="contenuto">Contenuto</string>
    <string name="avatar">avatar</string>
    <string name="nome">Nome</string>
    <string name="title_activity_details">Details</string>
    <string name="enter_you_email">enter you email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="add">ADD</string>
    <string name="_00_00">00:00</string>
    <string name="food_and_drink">Food and drink…</string>
    <string name="schedule">SCHEDULE</string>
    <string name="choose_your_option">Choose your options</string>
    <string name="open_time_picker">open time picker</string>
    <string name="back">Back</string>
    <string name="notify_me">Notify me</string>
    <string name="log_in">LOG IN</string>
    <string name="pet_name">Pet Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="color_s">Color/s</string>
    <string name="assigned_sex_at_birth">Assigned Sex at Birth</string>
    <string name="enter_your_pet_s_name_here">Enter your pet\'s name here</string>
    <string name="species">Species</string>
    <string name="pet_list">Pet List</string>
    <string name="your_pets">Your pets</string>
    <string name="activity">Activity</string>
    <string name="fill_every_option_to_add_your_pet">Fill every option to add your Pet!</string>
    <string name="registration">Registration</string>
    <string-array name="species">
        <item>Cat</item>
        <item>Dog</item>
        <item>Bird</item>
        <item>Fish</item>
        <item>Turtle</item>
        <item>Reptile</item>
        <item>Horse</item>
        <item>Pig</item>
        <item>Rabbit</item>
        <item>Rodent</item>
        <item>Other</item>
    </string-array>
</resources>