<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primario_variante"
    tools:context=".Login">

    <RelativeLayout
        android:id="@+id/centerline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_above="@id/centerline"
            android:layout_marginBottom="150dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/secondario"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_to_continue"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@color/secondario"
                android:textStyle="italic"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/centerline"
            android:layout_marginBottom="10sp"
            android:id="@+id/email"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginemail"
                android:hint="@string/enter_you_email"
                android:textStyle="italic"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/centerline"
            android:layout_marginTop="10sp"
            android:id="@+id/password"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            app:passwordToggleEnabled="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginpassword"
                android:hint="@string/enter_your_password"
                android:textStyle="italic"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/secondario"
        android:padding="8sp"
        android:text="LOGIN"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/testo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbutton"
        android:layout_marginTop="20sp"
        android:text="Don't have an account yet?"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <Button
        android:id="@+id/signupbutton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/testo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/secondario"
        android:padding="8sp"
        android:text="SIGN UP"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"/>


</RelativeLayout>
